Fix whitespace issue on Chromium 59+
Whoops, forgot to update this file

--- a/src/res/main.css
+++ b/src/res/main.css
@@ -127,6 +127,7 @@ table {
 	line-height: 24px;
 	white-space: -o-pre-wrap; /* Opera */
 	word-wrap: break-word; /* Internet Explorer 5.5+ */
+	display: inline-block;
 }
 
 .message-pane li>div.server-message {
